parser/abu_parser.go
// Code generated from AbuParser.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // AbuParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type AbuParser struct {
	*antlr.BaseParser
}

var abuparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func abuparserParserInit() {
	staticData := &abuparserParserStaticData
	staticData.literalNames = []string{
		"", "'and'", "'or'", "'not'", "'absint'", "'absdec'", "'.'", "'+'",
		"'-'", "'/'", "'*'", "'%'", "'=='", "'>'", "'<'", "'>='", "'<='", "'!='",
		"'::'", "':'", "';'", "':='", "'='", "','", "'('", "')'", "'['", "']'",
		"'{'", "'}'", "'has'", "'where'", "'physical'", "'logical'", "'input'",
		"'output'", "'rule'", "", "", "'on'", "'for'", "'all'", "'do'", "'define'",
		"'as'", "'boolean'", "'integer'", "'decimal'", "'string'", "'true'",
		"'false'",
	}
	staticData.symbolicNames = []string{
		"", "AND", "OR", "NOT", "ABSINT", "ABSDEC", "DOT", "PLUS", "MINUS",
		"DIV", "MUL", "MOD", "EQUALS", "GT", "LT", "GTE", "LTE", "NOTEQUALS",
		"DOUBLECOLON", "COLON", "SEMICOLON", "COLONEQUAL", "EQUALSIGN", "COMMA",
		"RL_BRACKET", "RR_BRACKET", "SL_BRACKET", "SR_BRACKET", "CL_BRACKET",
		"CR_BRACKET", "HAS", "WHERE", "PHYSICAL", "LOGICAL", "INPUT", "OUTPUT",
		"RULE", "THIS", "EXT", "ON", "FOR", "ALL", "DO", "DEFINE", "AS", "BOOLEAN",
		"INTEGER", "DECIMAL", "STRING", "TRUE", "FALSE", "ID", "QUOTED_STRING",
		"DEC_LITERAL", "INT_LITERAL", "WS", "COMMENT", "LINE_COMMENT",
	}
	staticData.ruleNames = []string{
		"program", "typeDecl", "resField", "device", "resList", "resDecl", "compResDecl",
		"type", "ecarule", "task", "actions", "assignment", "expression", "mulDivModOperator",
		"plusMinusOperator", "comparisonOperator", "term", "value", "resource",
		"simpleResource", "nestedResource", "decimalLiteral", "integerLiteral",
		"stringLiteral", "booleanLiteral",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// AbuParserInit initializes any static state used to implement AbuParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAbuParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AbuParserInit() {
	staticData := &abuparserParserStaticData
	staticData.once.Do(abuparserParserInit)
}

// NewAbuParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAbuParser(input antlr.TokenStream) *AbuParser {
	AbuParserInit()
	this := new(AbuParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &abuparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "AbuParser.g4"

	return this
}

// AbuParser tokens.
const (
	AbuParserEOF           = antlr.TokenEOF
	AbuParserAND           = 1
	AbuParserOR            = 2
	AbuParserNOT           = 3
	AbuParserABSINT        = 4
	AbuParserABSDEC        = 5
	AbuParserDOT           = 6
	AbuParserPLUS          = 7
	AbuParserMINUS         = 8
	AbuParserDIV           = 9
	AbuParserMUL           = 10
	AbuParserMOD           = 11
	AbuParserEQUALS        = 12
	AbuParserGT            = 13
	AbuParserLT            = 14
	AbuParserGTE           = 15
	AbuParserLTE           = 16
	AbuParserNOTEQUALS     = 17
	AbuParserDOUBLECOLON   = 18
	AbuParserCOLON         = 19
	AbuParserSEMICOLON     = 20
	AbuParserCOLONEQUAL    = 21
	AbuParserEQUALSIGN     = 22
	AbuParserCOMMA         = 23
	AbuParserRL_BRACKET    = 24
	AbuParserRR_BRACKET    = 25
	AbuParserSL_BRACKET    = 26
	AbuParserSR_BRACKET    = 27
	AbuParserCL_BRACKET    = 28
	AbuParserCR_BRACKET    = 29
	AbuParserHAS           = 30
	AbuParserWHERE         = 31
	AbuParserPHYSICAL      = 32
	AbuParserLOGICAL       = 33
	AbuParserINPUT         = 34
	AbuParserOUTPUT        = 35
	AbuParserRULE          = 36
	AbuParserTHIS          = 37
	AbuParserEXT           = 38
	AbuParserON            = 39
	AbuParserFOR           = 40
	AbuParserALL           = 41
	AbuParserDO            = 42
	AbuParserDEFINE        = 43
	AbuParserAS            = 44
	AbuParserBOOLEAN       = 45
	AbuParserINTEGER       = 46
	AbuParserDECIMAL       = 47
	AbuParserSTRING        = 48
	AbuParserTRUE          = 49
	AbuParserFALSE         = 50
	AbuParserID            = 51
	AbuParserQUOTED_STRING = 52
	AbuParserDEC_LITERAL   = 53
	AbuParserINT_LITERAL   = 54
	AbuParserWS            = 55
	AbuParserCOMMENT       = 56
	AbuParserLINE_COMMENT  = 57
)

// AbuParser rules.
const (
	AbuParserRULE_program            = 0
	AbuParserRULE_typeDecl           = 1
	AbuParserRULE_resField           = 2
	AbuParserRULE_device             = 3
	AbuParserRULE_resList            = 4
	AbuParserRULE_resDecl            = 5
	AbuParserRULE_compResDecl        = 6
	AbuParserRULE_type               = 7
	AbuParserRULE_ecarule            = 8
	AbuParserRULE_task               = 9
	AbuParserRULE_actions            = 10
	AbuParserRULE_assignment         = 11
	AbuParserRULE_expression         = 12
	AbuParserRULE_mulDivModOperator  = 13
	AbuParserRULE_plusMinusOperator  = 14
	AbuParserRULE_comparisonOperator = 15
	AbuParserRULE_term               = 16
	AbuParserRULE_value              = 17
	AbuParserRULE_resource           = 18
	AbuParserRULE_simpleResource     = 19
	AbuParserRULE_nestedResource     = 20
	AbuParserRULE_decimalLiteral     = 21
	AbuParserRULE_integerLiteral     = 22
	AbuParserRULE_stringLiteral      = 23
	AbuParserRULE_booleanLiteral     = 24
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbuParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbuParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Device() IDeviceContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeviceContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeviceContext)
}

func (s *ProgramContext) AllTypeDecl() []ITypeDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITypeDeclContext); ok {
			len++
		}
	}

	tst := make([]ITypeDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITypeDeclContext); ok {
			tst[i] = t.(ITypeDeclContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) TypeDecl(i int) ITypeDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeDeclContext)
}

func (s *ProgramContext) AllEcarule() []IEcaruleContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEcaruleContext); ok {
			len++
		}
	}

	tst := make([]IEcaruleContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEcaruleContext); ok {
			tst[i] = t.(IEcaruleContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Ecarule(i int) IEcaruleContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEcaruleContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEcaruleContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *AbuParser) Program() (localctx IProgramContext) {
	this := p
	_ = this

	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AbuParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == AbuParserDEFINE {
		{
			p.SetState(50)
			p.TypeDecl()
		}

		p.SetState(55)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(56)
		p.Device()
	}
	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == AbuParserRULE {
		{
			p.SetState(57)
			p.Ecarule()
		}

		p.SetState(62)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ITypeDeclContext is an interface to support dynamic dispatch.
type ITypeDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTypeDeclContext differentiates from other interfaces.
	IsTypeDeclContext()
}

type TypeDeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeDeclContext() *TypeDeclContext {
	var p = new(TypeDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbuParserRULE_typeDecl
	return p
}

func (*TypeDeclContext) IsTypeDeclContext() {}

func NewTypeDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeDeclContext {
	var p = new(TypeDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbuParserRULE_typeDecl

	return p
}

func (s *TypeDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeDeclContext) DEFINE() antlr.TerminalNode {
	return s.GetToken(AbuParserDEFINE, 0)
}

func (s *TypeDeclContext) ID() antlr.TerminalNode {
	return s.GetToken(AbuParserID, 0)
}

func (s *TypeDeclContext) AS() antlr.TerminalNode {
	return s.GetToken(AbuParserAS, 0)
}

func (s *TypeDeclContext) CL_BRACKET() antlr.TerminalNode {
	return s.GetToken(AbuParserCL_BRACKET, 0)
}

func (s *TypeDeclContext) CR_BRACKET() antlr.TerminalNode {
	return s.GetToken(AbuParserCR_BRACKET, 0)
}

func (s *TypeDeclContext) AllResField() []IResFieldContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IResFieldContext); ok {
			len++
		}
	}

	tst := make([]IResFieldContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IResFieldContext); ok {
			tst[i] = t.(IResFieldContext)
			i++
		}
	}

	return tst
}

func (s *TypeDeclContext) ResField(i int) IResFieldContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResFieldContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IResFieldContext)
}

func (s *TypeDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.EnterTypeDecl(s)
	}
}

func (s *TypeDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.ExitTypeDecl(s)
	}
}

func (p *AbuParser) TypeDecl() (localctx ITypeDeclContext) {
	this := p
	_ = this

	localctx = NewTypeDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AbuParserRULE_typeDecl)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(AbuParserDEFINE)
	}
	{
		p.SetState(64)
		p.Match(AbuParserID)
	}
	{
		p.SetState(65)
		p.Match(AbuParserAS)
	}
	{
		p.SetState(66)
		p.Match(AbuParserCL_BRACKET)
	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == AbuParserID {
		{
			p.SetState(67)
			p.ResField()
		}

		p.SetState(70)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(72)
		p.Match(AbuParserCR_BRACKET)
	}

	return localctx
}

// IResFieldContext is an interface to support dynamic dispatch.
type IResFieldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsResFieldContext differentiates from other interfaces.
	IsResFieldContext()
}

type ResFieldContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyResFieldContext() *ResFieldContext {
	var p = new(ResFieldContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbuParserRULE_resField
	return p
}

func (*ResFieldContext) IsResFieldContext() {}

func NewResFieldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ResFieldContext {
	var p = new(ResFieldContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbuParserRULE_resField

	return p
}

func (s *ResFieldContext) GetParser() antlr.Parser { return s.parser }

func (s *ResFieldContext) ID() antlr.TerminalNode {
	return s.GetToken(AbuParserID, 0)
}

func (s *ResFieldContext) COLON() antlr.TerminalNode {
	return s.GetToken(AbuParserCOLON, 0)
}

func (s *ResFieldContext) PHYSICAL() antlr.TerminalNode {
	return s.GetToken(AbuParserPHYSICAL, 0)
}

func (s *ResFieldContext) OUTPUT() antlr.TerminalNode {
	return s.GetToken(AbuParserOUTPUT, 0)
}

func (s *ResFieldContext) Type() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *ResFieldContext) INPUT() antlr.TerminalNode {
	return s.GetToken(AbuParserINPUT, 0)
}

func (s *ResFieldContext) LOGICAL() antlr.TerminalNode {
	return s.GetToken(AbuParserLOGICAL, 0)
}

func (s *ResFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ResFieldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ResFieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.EnterResField(s)
	}
}

func (s *ResFieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.ExitResField(s)
	}
}

func (p *AbuParser) ResField() (localctx IResFieldContext) {
	this := p
	_ = this

	localctx = NewResFieldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AbuParserRULE_resField)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(88)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(74)
			p.Match(AbuParserID)
		}
		{
			p.SetState(75)
			p.Match(AbuParserCOLON)
		}
		{
			p.SetState(76)
			p.Match(AbuParserPHYSICAL)
		}
		{
			p.SetState(77)
			p.Match(AbuParserOUTPUT)
		}
		{
			p.SetState(78)
			p.Type()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(79)
			p.Match(AbuParserID)
		}
		{
			p.SetState(80)
			p.Match(AbuParserCOLON)
		}
		{
			p.SetState(81)
			p.Match(AbuParserPHYSICAL)
		}
		{
			p.SetState(82)
			p.Match(AbuParserINPUT)
		}
		{
			p.SetState(83)
			p.Type()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(84)
			p.Match(AbuParserID)
		}
		{
			p.SetState(85)
			p.Match(AbuParserCOLON)
		}
		{
			p.SetState(86)
			p.Match(AbuParserLOGICAL)
		}
		{
			p.SetState(87)
			p.Type()
		}

	}

	return localctx
}

// IDeviceContext is an interface to support dynamic dispatch.
type IDeviceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeviceContext differentiates from other interfaces.
	IsDeviceContext()
}

type DeviceContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeviceContext() *DeviceContext {
	var p = new(DeviceContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbuParserRULE_device
	return p
}

func (*DeviceContext) IsDeviceContext() {}

func NewDeviceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeviceContext {
	var p = new(DeviceContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbuParserRULE_device

	return p
}

func (s *DeviceContext) GetParser() antlr.Parser { return s.parser }

func (s *DeviceContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(AbuParserID)
}

func (s *DeviceContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(AbuParserID, i)
}

func (s *DeviceContext) COLON() antlr.TerminalNode {
	return s.GetToken(AbuParserCOLON, 0)
}

func (s *DeviceContext) StringLiteral() IStringLiteralContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStringLiteralContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStringLiteralContext)
}

func (s *DeviceContext) CL_BRACKET() antlr.TerminalNode {
	return s.GetToken(AbuParserCL_BRACKET, 0)
}

func (s *DeviceContext) ResList() IResListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IResListContext)
}

func (s *DeviceContext) CR_BRACKET() antlr.TerminalNode {
	return s.GetToken(AbuParserCR_BRACKET, 0)
}

func (s *DeviceContext) WHERE() antlr.TerminalNode {
	return s.GetToken(AbuParserWHERE, 0)
}

func (s *DeviceContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *DeviceContext) HAS() antlr.TerminalNode {
	return s.GetToken(AbuParserHAS, 0)
}

func (s *DeviceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeviceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeviceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.EnterDevice(s)
	}
}

func (s *DeviceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.ExitDevice(s)
	}
}

func (p *AbuParser) Device() (localctx IDeviceContext) {
	this := p
	_ = this

	localctx = NewDeviceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, AbuParserRULE_device)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(90)
		p.Match(AbuParserID)
	}
	{
		p.SetState(91)
		p.Match(AbuParserCOLON)
	}
	{
		p.SetState(92)
		p.StringLiteral()
	}
	{
		p.SetState(93)
		p.Match(AbuParserCL_BRACKET)
	}
	{
		p.SetState(94)
		p.ResList()
	}
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AbuParserWHERE {
		{
			p.SetState(95)
			p.Match(AbuParserWHERE)
		}
		{
			p.SetState(96)
			p.expression(0)
		}

	}
	{
		p.SetState(99)
		p.Match(AbuParserCR_BRACKET)
	}
	p.SetState(106)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AbuParserHAS {
		{
			p.SetState(100)
			p.Match(AbuParserHAS)
		}
		p.SetState(102)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ok := true; ok; ok = _la == AbuParserID {
			{
				p.SetState(101)
				p.Match(AbuParserID)
			}

			p.SetState(104)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}

	return localctx
}

// IResListContext is an interface to support dynamic dispatch.
type IResListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsResListContext differentiates from other interfaces.
	IsResListContext()
}

type ResListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyResListContext() *ResListContext {
	var p = new(ResListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbuParserRULE_resList
	return p
}

func (*ResListContext) IsResListContext() {}

func NewResListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ResListContext {
	var p = new(ResListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbuParserRULE_resList

	return p
}

func (s *ResListContext) GetParser() antlr.Parser { return s.parser }

func (s *ResListContext) AllResDecl() []IResDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IResDeclContext); ok {
			len++
		}
	}

	tst := make([]IResDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IResDeclContext); ok {
			tst[i] = t.(IResDeclContext)
			i++
		}
	}

	return tst
}

func (s *ResListContext) ResDecl(i int) IResDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IResDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IResDeclContext)
}

func (s *ResListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ResListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ResListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.EnterResList(s)
	}
}

func (s *ResListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbuParserListener); ok {
		listenerT.ExitResList(s)
	}
}

func (p *AbuParser) ResList() (localctx IResListContext) {
	this := p
	_ = this

	localctx = NewResListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, AbuParserRULE_resList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(109)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la-32)&-(0x1f+1)) == 0 && ((1<<uint((_la-32)))&((1<<(AbuParserPHYSICAL-32))|(1<<(AbuParserLOGICAL-32))|(1<<(AbuParserID-32)))) != 0) {
		{
			p.SetState(108)
			p.ResDecl()
		}

		p.SetState(111)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IResDeclContext is an interface to support dynamic dispatch.
type IResDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsResDeclContext differentiates from other interfaces.
	IsResDeclContext()
}
